--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.0"
   }
