--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
     "jimp": "^0.22.12",
     "next": "14.1.1",
     "react": "^18",
+    "react-awesome-button": "^7.0.5",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   }
 }
