--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "canvas": "^2.11.2",
     "jimp": "^0.22.12",
     "next": "14.1.1",
     "react": "^18",
