--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "canvas": "^2.11.2",
+    "html-to-image": "^1.11.11",
     "jimp": "^0.22.12",
     "next": "14.1.1",
+    "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.15.0",
     "react": "^18",
     "react-awesome-button": "^7.0.5",
     "react-dom": "^18",
