--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "canvas": "^2.11.2",
+    "downloadjs": "^1.4.7",
     "html-to-image": "^1.11.11",
     "jimp": "^0.22.12",
     "next": "14.1.1",
